# ai-art-casa

./: .gitignore  README.md  conda_macm1_environment.yaml  config.py  download_dataset.ipynb  pyproject.toml  requirements.txt  run.sh  run_test.py
notebooks/: Training_Model_Single_Art_Style_Template.ipynb  artStyles_InceptionV3Training.ipynb  artStyles_ResNet50Training.ipynb  art_nouveau_ConvTraining.ipynb  art_nouveau_VGG16Training.ipynb  art_nouveau_VGG19Training.ipynb  baroque_ConvTraining.ipynb  baroque_VGG16Training.ipynb  baroque_VGG19Training.ipynb  download_dataset.ipynb  expressionism_ConvTraining.ipynb  expressionism_VGG16Training.ipynb  expressionism_VGG19Training.ipynb  impressionism_ConvTraining.ipynb  impressionism_VGG16Training.ipynb  impressionism_VGG19Training.ipynb  post_impressionism_ConvTraining.ipynb  post_impressionism_VGG16Training.ipynb  post_impressionism_VGG19Training.ipynb  realism_ConvTraining.ipynb  realism_VGG16Training.ipynb  realism_VGG19Training.ipynb  renaissance_ConvTraining.ipynb  renaissance_VGG16Training.ipynb  renaissance_VGG19Training.ipynb  romanticism_ConvTraining.ipynb  romanticism_VGG16Training.ipynb  romaticism_VGG19Training.ipynb  surrealism_ConvTraining.ipynb  surrealism_VGG16Training.ipynb  surrealism_VGG19Training.ipynb  testing.ipynb  training_ai.ipynb  ukiyo-e_ConvTraining.ipynb  ukiyo-e_VGG16Training.ipynb  ukiyo-e_VGG19Training.ipynb
notebooks/all-art-styles/: artStyles_InceptionV3Training.ipynb
notebooks/art_nouveau/: art_nouveau_ConvTraining.ipynb  art_nouveau_VGG16Training.ipynb
(+18 files in other folders)
