[tool.poetry]
name = "ai-art-casa"
version = "0.1.0"
description = ""
authors = ["Merenda Franco N. <f.merenda2@studenti.unisa.it>", "Katia Melanie Perchet <k.perchet@studenti.unisa.it>"]
readme = "README.md"
packages = [{include = "ai_art_casa"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
