[tool.poetry]
name = "ai-art-casa"
version = "0.1.0"
description = ""
authors = ["Merenda Franco N. <f.merenda2@studenti.unisa.it>", "Katia Melanie Perchet <k.perchet@studenti.unisa.it>", "Santiago Morales <s.moraleshenao@studenti.unisa.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
keras = "^3.3.3"
tensorflow = "^2.16.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
